--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <img class="profile-pic" src="https://randomuser.me/api/portraits/men/21.jpg" alt="Personal CV Picture">
       <div>
-        <h1 class="nombre">Juan Barrios</h1>
+        <h1 class="nombre">Juanx Barrios</h1>
         <p class="profesion">Front-end Developer</p>
       </div> 
     </header>
