--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <div>
         <h1 class="nombre">Juanx Barrios</h1>
         <p class="profesion">Front-end Developer</p>
+        <h3>Datos de contacto:</h3>
+        <p>Email: juanbarrios@gshdja.com</p>
       </div> 
     </header>
 
