Actualizar index.html
Agregué el teléfono y borré la x del nombre

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <header>
       <img class="profile-pic" src="https://randomuser.me/api/portraits/men/21.jpg" alt="Personal CV Picture">
       <div>
-        <h1 class="nombre">Juanx Barrios</h1>
+        <h1 class="nombre">Juan Barrios</h1>
         <p class="profesion">Front-end Developer</p>
         <h3>Datos de contacto:</h3>
-        <p>Email: juanbarrios@gshdja.com</p>
+<ul>
+        <li>Email: juanbarrios@gshdja.com</li>
+        <li>Móvil: +54 9 12345678</li>
+</ul>
       </div> 
     </header>
 
