Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="nombre">Juan Barrios</h1>
         <p class="profesion">Front-end Developer</p>
 <ul>
-        <h3>Datos de contacto:</h3>
+        <h3>Datos de contacto</h3>
         <li>Email: juanbarrios@gshdja.com</li>
         <li>Móvil: +54 9 12345678</li>
 </ul>
